--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - master
       - main
+  pull_request:
+    branches: [master, main]
+    types: [opened, synchronize]
 
 jobs:
   deployment_pipeline:
