--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
             start: npm run start-prod
             wait-on: http://localhost:5000
   tag_release:
-    needs: [simple_deployment_pipeline]
+    needs: [deployment_pipeline]
     if: "!contains(github.event.head_commit.message, '#skip')"
     runs-on: ubuntu-22.04
     steps:
