--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,14 +49,14 @@ jobs:
         with:
             severity: info
             details: Test Succeeded, last commit by ${{github.event.pull_request.head_commit.author}}
-            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            webhookUrl: ${{secrets.FSO_DISCORD_WEBHOOK}}
       - name: Test Failure
         uses: rjstone/discord-webhook-notify@v1
         if: failure()
         with:
             severity: error
             details: Test failed, last commit by ${{github.event.pull_request.head_commit.author}}
-            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            webhookUrl: ${{FSO_DISCORD_WEBHOOK}}
       - name: Test Cancelled
         uses: rjstone/discord-webhook-notify@v1
         if: cancelled()
